Fix the alignment

--- a/css/main.css
+++ b/css/main.css
@@ -12,10 +12,9 @@ body {
 }
 
 .banner {
-  position: relative;
   max-height: 500px;
   overflow: hidden;
-  width: 100%;
+  position: relative;
 }
 
 .img-flex {
@@ -24,33 +23,35 @@ body {
 }
 
 .banner-content {
-  align-items: center;
-  bottom: 0;
-  top: 0;
+  align-items: flex-start;
   display: flex;
   justify-content: space-between;
   left: 50%;
   max-height: 500px;
   max-width: 45em;
   position: absolute;
-  transform: translateX(-50%);
+  top: 50%;
+  transform: translateX(-50%, -50%);
   width: 100%;
 }
 
 .banner-image {
-  width: 33%;
+  padding: 1.2rem;
+  width: 400px;
 }
 
 .banner-text {
-  width: 55%;
+  text-align: left;
+  padding: 1.5rem;
 }
 
 .banner-text h2 {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 3rem;
   font-weight: bold;
-  margin: 0;
-  margin-bottom: .5rem;
+  line-height: 1.2;
+  margin-bottom: .2em;
+  margin-top: 0;
 }
 
 .banner-text p {
@@ -58,21 +59,23 @@ body {
   font-weight: lighter;
   line-height: 1.5;
   margin: 0;
-  margin-bottom: 2rem;
+  margin-bottom: 1em;
 }
 
 .btn {
-  background-color: #333;
-  border-radius: .4rem;
-  padding: 1.2rem;
+  background-color: #313131;
+  border: 3px solid #313131;
+  border-radius: 10px;
+  padding: .9rem 1rem;
 }
 
 .btn:hover {
   background-color: #000;
+  border: 3px solid #000;
 }
 
 .btn-big {
-  color: #fff;
+  color: #f5f5f5;
   font-size: 1.5rem;
   font-weight: lighter;
   text-decoration: none;
